--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {},
   "devDependencies": {
@@ -14,9 +15,12 @@
     "@davidcraig/react-schema": "^1.0.1",
     "@davidcraig/wow": "^1.0.1",
     "bulma": "^0.9.1",
+    "cypress": "^6.4.0",
+    "jest": "^26.6.3",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-test-renderer": "^17.0.1",
     "sass": "^1.32.0"
   }
 }
